syntax = "proto3";

option csharp_namespace = "DbData.Protos";
package dbdata;

import "msgDbDataCommon.proto";
import "msgDestination.proto";
import "msgDestinationLanguage.proto";

// service definition.
service DestinationLanguageServices {
  rpc Get (IdLangRequest) returns (DestinationLanguageStruct); 
  rpc GetById (IdRequest) returns (DestinationLanguageStruct); 
  rpc GetList (DestinationLanguageFilter) returns (DestinationLanguageResponse); 
  rpc GetListById (IdRequest) returns (DestinationLanguageResponse); 
  
  rpc Add(DestinationLanguageStruct) returns (ResponseMessage);
  rpc Edit(DestinationLanguageStruct) returns (ResponseMessage);
  rpc Delete(IdRequest) returns (ResponseMessage);
}